--- a/package.json
+++ b/package.json
@@ -62,7 +62,11 @@
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
-    "webpack-merge": "^4.1.0"
+    "webpack-merge": "^4.1.0",
+    "minimist": ">=0.2.1",
+    "js-yaml": ">=3.13.1",
+    "acorn": ">=5.7.4"
+
   },
   "engines": {
     "node": ">= 6.0.0",
